--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/kristw/ng-vega",
   "dependencies": {
     "d3": "~3.5.5",
+    "vega": "~2.4.2",
     "angular": "~1.3.15"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-shell": "~1.1.2",
+    "grunt-gh-pages": "~0.10.0",
     "load-grunt-config": "~0.17.1",
     "time-grunt": "~1.2.1"
   }
