update ignore list

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,13 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "src",
+    "examples",
+    "docs",
+    "Gruntfile.js",
+    "grunt/*.js",
+    "package.json"
   ],
   "dependencies": {
     "d3": "~3.5.5",
