--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Angular directive for rendering vega specs",
   "main": "dist/ng-vega.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "grunt build",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A dist",
+    "postversion": "pkgfiles",
+    "prepublish": "git push ; git push --tags"
   },
   "repository": {
     "type": "git",
@@ -35,12 +40,10 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-bump": "~0.3.1",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-uglify": "~0.9.1",
-    "grunt-shell": "~1.1.2",
     "grunt-gh-pages": "~0.10.0",
     "load-grunt-config": "~0.17.1",
     "time-grunt": "~1.2.1"
