--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "homepage": "https://github.com/kristw/ng-vega",
   "dependencies": {
+    "angular": "~1.3.15",
     "d3": "~3.5.5",
-    "vega": "~2.4.2",
-    "angular": "~1.3.15"
+    "vega": "^4.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
