--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "d3": "~3.5.5",
-    "vega": "~2.4.2",
+    "vega":  "^4.0.0",
     "angular": "~1.3.15"
   },
   "devDependencies": {
